fixed spacing

--- a/playList.css
+++ b/playList.css
@@ -1,24 +1,16 @@
-
-/*INFO:
-This is the styling sheet for the 
-
-
-
-/* The side playlist menu */
 .sidenav {
-  height: 100%; /* 100% Full-height */
-  width: 0; /* 0 width - change this with JavaScript */
-  position: fixed; /* Stay in place */
-  z-index: 11; /* Stay on top */
-  top: 0; /* Stay at the top */
+  height: 100%; 
+  width: 0; 
+  position: fixed; 
+  z-index: 11; 
+  top: 0; 
   left: 0;
-  background-color: #111; /* Black*/
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 60px; /* Place content 60px from the top */
-  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  background-color: #111; 
+  overflow-x: hidden; 
+  padding-top: 60px; 
+  transition: 0.5s;
 }
 
-/* The playlist tracks */
 .sidenav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
@@ -28,12 +20,10 @@ This is the styling sheet for the
   transition: 0.3s;
 }
 
-/* When you mouse over the playlist tracks, change their color */
 .sidenav a:hover {
   color: #f1f1f1;
 }
 
-/* Position and style the close button (top right corner) */
 .sidenav .closebtn {
   position: absolute;
   top: 0;
@@ -42,26 +32,25 @@ This is the styling sheet for the
   margin-left: 50px;
 }
 
-#playListOpen { /* This is the open music stylings*/
-    text-align: left; 
-    top:7px;
-    position: absolute;
-    font-size: 18px;
-    cursor:pointer;
-    z-index: 10;
+#playListOpen { 
+  text-align: left; 
+  top:7px;
+  position: absolute;
+  font-size: 18px;
+  cursor:pointer;
+  z-index: 10;
 }
 
 #playListClimate {
-    width: 50px;
-    height: 50px;
-    margin-bottom: -12px;
+  width: 50px;
+  height: 50px;
+  margin-bottom: -12px;
 }
 
 .playListTitle {
-    display: inline-block;
+  display: inline-block;
 }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
